--- a/src/www/index.html
+++ b/src/www/index.html
@@ -6,12 +6,14 @@
 <body>
   <div id="app">
     <h1>Hello App!</h1>
+    <h5>message:{{message}}</h5>
     <p>
       <!-- use v-link directive for navigation. -->
-      <a v-link="{ path: '/foo' }">Go to Foo</a>
-      <a v-link="{ path: '/bar' }">Go to Bar</a>
+      <a v-link="{ path: '/foo' }">Foo</a><br />
+      <p>Name is: {{name}}</p>
+      <input type="text" v-model="name" placeholder="name">
+      <a v-link="{ path: '/bar/' + name }">Bar</a>
     </p>
-    <!-- use router-view element as route outlet -->
     <router-view></router-view>
   </div>
   <script src="./assets/main.js"></script>
