--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,13 +8,16 @@
     <h1>Hello App!</h1>
     <h5>message:{{message}}</h5>
     <p>
-      <!-- use v-link directive for navigation. -->
-      <a v-link="{ path: '/foo' }">Foo</a><br />
+      <!-- https://router.vuejs.org/en/api/router-link.html -->
+      <router-link to="/foo" >Foo</router-link><br />
       <p>Name is: {{name}}</p>
       <input type="text" v-model="name" placeholder="name">
-      <a v-link="{ path: '/bar/' + name }">Bar</a>
+      <router-link :to="{name:'bar', params:{name:name}}">Bar</router-link>
     </p>
-    <router-view></router-view>
+    <transition name="slide">
+      <router-view ref="view"></router-view>
+    </transition>
+
   </div>
   <script src="./assets/main.js"></script>
 </body>
