[modify] patch vue example

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -5,21 +5,69 @@
 
 <body>
   <div id="app">
-    <h1>Hello App!</h1>
-    <h5>message:{{message}}</h5>
-    <p>
-      <!-- https://router.vuejs.org/en/api/router-link.html -->
-      <router-link to="/foo" >Foo</router-link><br />
-      <p>Name is: {{name}}</p>
-      <input type="text" v-model="name" placeholder="name">
-      <router-link :to="{name:'bar', params:{name:name}}">Bar</router-link>
-    </p>
-    <transition name="slide">
-      <router-view ref="view"></router-view>
-    </transition>
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Hello App</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <!-- https://router.vuejs.org/en/api/router-link.html -->
+              <router-link to="/foo">Foo</router-link>
+            </li>
+            <li>
+              <router-link to="/alert">Alert</router-link>
+            </li>
 
-  </div>
-  <script src="./assets/main.js"></script>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+
+          <form class="navbar-form navbar-right">
+            <div class="input-group">
+              <input class="form-control" type="text" v-model="id" placeholder="name" @keyup.enter="$router.push({name:'bar',  query:{id:id}})">
+              <div class="input-group-btn">
+                <router-link class="btn btn-default" :to="{name:'bar', query:{id:id}}">Bar</router-link>
+              </div>
+            </div>
+          </form>
+        </div>
+        <!-- /.navbar-collapse -->
+    </nav>
+    <div class="container">
+      <div class="jumbotron">
+        <h5>message:{{message}}</h5>
+        <transition name="slide">
+          <keep-alive>
+            <router-view ref="view"></router-view>
+          </keep-alive>
+        </transition>
+      </div>
+    </div>
+    </div>
+    <script src="./assets/main.js"></script>
 </body>
 
 
