--- a/src/www/index.html
+++ b/src/www/index.html
@@ -28,6 +28,9 @@
             <li>
               <router-link :to="{name:'alert'}">Alert</router-link>
             </li>
+            <li>
+              <router-link :to="{name:'example-modal'}">Modal</router-link>
+            </li>
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
