--- a/src/www/index.html
+++ b/src/www/index.html
@@ -6,7 +6,7 @@
 <body>
   <div id="app">
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -16,7 +16,7 @@
           </button>
           <a class="navbar-brand" href="#">Hello App</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar-collapse" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li>
               <router-link :to="{name:'home'}">Home</router-link>
